[package]
name = "serial-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.7.1"                                    # ust的通用跨平台串行端口库
clap = { version = "4", features = ["derive"] }         # 命令行解析
anyhow = "1"                                            # 错误处理
log = "0.4"                                             # 日志接口
env_logger = "0.11.8"                                   # 日志实现